index.html Title changed

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,4 +1,6 @@
 // Font
 $font-family-sans-serif: 'Poppins', sans-serif;
 
+$primary: #cc005f;
+
 @import '../node_modules/bootstrap/scss/bootstrap';
