color set in scss

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -2,5 +2,9 @@
 $font-family-sans-serif: 'Poppins', sans-serif;
 
 $primary: #cc005f;
+$secondary: #990047;
+$dark: #000;
+$light: f4f4f4;
+
 
 @import '../node_modules/bootstrap/scss/bootstrap';
