--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -7,4 +7,19 @@ $dark: #000;
 $light: f4f4f4;
 
 
+// Buttons
+$button-radius: 0;
+$button-padding-x: 39px;
+$button-padding-y: 12px;
+
+$btn-border-radius: $button-radius;
+$btn-border-radius-sm: $button-radius;
+$btn-border-radius-lg: $button-radius;
+$btn-padding-y: $button-padding-y;
+$btn-padding-y-lg: $button-padding-y;
+$btn-padding-y-sm: $button-padding-y;
+$btn-padding-x: $button-padding-x;
+$btn-padding-x-lg: $button-padding-x;
+$btn-padding-x-sm: $button-padding-x;
+
 @import '../node_modules/bootstrap/scss/bootstrap';
