-toggler-border-radius: 5px; addedin scss

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -22,4 +22,6 @@ $btn-padding-x: $button-padding-x;
 $btn-padding-x-lg: $button-padding-x;
 $btn-padding-x-sm: $button-padding-x;
 
+$navbar-toggler-border-radius: 5px;
+
 @import '../node_modules/bootstrap/scss/bootstrap';
