bottstrap.scss error fixed

--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -4,7 +4,7 @@ $font-family-sans-serif: 'Poppins', sans-serif;
 $primary: #cc005f;
 $secondary: #990047;
 $dark: #000;
-$light: f4f4f4;
+$light: #f4f4f4;
 
 
 // Buttons
