--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,9 +6,22 @@
 
 .header::after {
     content: '';
-    
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+}
+
+.header .text-container {
+    z-index: 10;
+}
+
+.header .roles {
+    font-family: 'lora-regular', serif;
 }
 
 .header .social {
-    bottom: 50px;   
+    bottom: 50px;  
 }
