@media (max-width: 767px) {     .header .social i {         font-size: 30px;     } } added in style.scss

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -25,3 +25,9 @@
 .header .social {
     bottom: 50px;  
 }
+
+@media (max-width: 767px) {
+    .header .social i {
+        font-size: 30px;
+    }
+}
