--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -37,7 +37,7 @@
   }
   
   .services {
-    background: url('../images/bg.jpg') no-repeat center center;
+    background: url('../images/pexels-sam-kodler-2387877.jpg') no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
   }
